# BuildBook

./: AGENTS.md  CHANGELOG.md  Publish Release.bat  Publish.bat  README.md  RELEASE_NOTES.md  SECURITY.md  buildbook-copper-theme.json  buildbook-nord-selected-theme.json  buildbook-theme-blue-tint.json  buildbook-theme2.json  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: docker-image.yml  publish-live.yml  publish-test.yml  release-windows.yml
scripts/: Publish-Menu.ps1  Publish-Release.ps1
src/: App.jsx  data.js  desktop.js  storage.js  styles.css  zip.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
