[package]
name = "buildbook"
version = "0.3.10"
description = "Desktop electronics project tracker"
authors = ["BuildBook"]
edition = "2021"

[lib]
name = "buildbook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
